--- a/my-todo-backend/.env
+++ b/my-todo-backend/.env
@@ -1,5 +1,5 @@
-DB_USER=postgres
-DB_PASSWORD=0988204905su
-DB_HOST=db.apbkobhfnmcqqzqeeqss.supabase.co
-DB_PORT=5432
-DB_NAME=postgres
+USER=postgres.onhsywupgzlztfjsutnm
+PASSWORD=0988204905su
+HOST=aws-1-ap-southeast-2.pooler.supabase.com
+PORT=5432
+DBNAME=postgres
